--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.3.0
   google_fonts: ^6.2.1
   connectivity_plus: ^4.0.1
+  flutter_svg: ^2.1.0
 
 dev_dependencies:
   flutter_test:
