--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,10 +41,13 @@ dependencies:
   google_fonts: ^6.2.1
   connectivity_plus: ^4.0.1
   flutter_svg: ^2.1.0
+  flutter_native_splash: ^2.3.10
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -65,6 +70,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/profile_avatar/
+
+flutter_native_splash:
+  color: "#FFC107"
+  image: assets/profile_avatar/splash_image.png
+  android: true
+  ios: true
+  web: false
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
