--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   http: ^1.3.0
   google_fonts: ^6.2.1
   connectivity_plus: ^4.0.1
+  firebase_core: ^3.13.0
+  firebase_storage: ^12.4.5
 
 dev_dependencies:
   flutter_test:
